2005-11-22	Gaius Mulley <gaius@glam.ac.uk>

	* modified ppg to take an extra parameter -f which emits the
	  Free Documentation License header when producing texinfo
	  ebnf rules.
	* fixed many dates on source files.

2005-11-21	Gaius Mulley <gaius@glam.ac.uk>

	* fixed many Copyright dates and GPL, LGPL and FDL license
	  issues.
	* replaced gm2/ulm-lib-gm2/std/Storage.mod with an implementation
	  which uses malloc and free. This in turn fixes a runtime regression
	  test (hello world) now works with the Ulm libraries.
	* fixed gm2/gm2.texi to include FDL notice and also fixed all
	  included texi files in the same way.
	* added GPL, Modula-2 and Copyright notices to all gm2/tools-src
	  files.

2005-11-15	Gaius Mulley <gaius@glam.ac.uk>

	* added more regression tests and
	* completed the printing of set types within gdb
	* completed the printing of array and subrange types within gdb
	* made gdb print Modula-2 style CHARs and improved type printing
	  within gdb.
	* rationalised the gdb and gcc patches within the gm2/patch
	  subdirectories.
	* modified gm2-harness-0.6 to apply patches in order.
	* minor fixes to gm2/gccgm2.c to give better type information.
	* improved gdb section within gm2/gm2.texi

2005-11-11	Gaius Mulley <gaius@glam.ac.uk>

	* fixed minor node bugs in gm2/gm2.texi, gm2/gpl.texi, gm2/gnu.texi

2005-11-10	Gaius Mulley <gaius@glam.ac.uk>

	* added gm2/COPYING.LGPL
	* changed all references of the old FSF address to the new address.
	* fixed bugs reported by John Wallace (MAX(INTEGER), MAX(LONGINT),
	  MIN(INTEGER) and MIN(LONGINT)) were not correctly converted in
	  gm2/gm2-libs-pim/InOut.mod, gm2/gm2-libs/FpuIO.mod,
	  gm2/gm2-libs/NumberIO.mod.
	* added new regression tests in
	  gm2/switches/pim4/run/pass/InOutBug.mod and
	  gm2/switches/pim4/run/pass/FpuIOBug.mod which perform regression
	  runtime tests.

2005-11-07	Gaius Mulley <gaius@glam.ac.uk>

	* added gm2/COPYING and included licence information
	  inside gm2/gm2.texi